// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioSimpleGroup /> snapshot should match snapshot 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="test-ID"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    role="radiogroup"
  >
    <span
      id="test-ID"
    >
      <div>
        Select your favorite color
      </div>
    </span>
    <small
      class="md-text-wrapper"
      data-type="body-secondary"
    >
      Only choose one
    </small>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with child thats selected 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="true"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          checked=""
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with children 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with children with group disabled 1`] = `
<DocumentFragment>
  <div
    aria-disabled="true"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="true"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          disabled=""
          name="test-ID"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          disabled=""
          name="test-ID"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          disabled=""
          name="test-ID"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with children with read only 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    aria-readonly="true"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-readonly="true"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-readonly="true"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-readonly="true"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with className 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="example-className md-radio-simple-group-wrapper"
    data-disabled="false"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with description 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    role="radiogroup"
  >
    <small
      class="md-text-wrapper"
      data-type="body-secondary"
    >
      Only choose one
    </small>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with id 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="example-id"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with style 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    role="radiogroup"
    style="color: pink;"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Red
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Blue
      </p>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <p
        class="md-text-wrapper"
        data-type="body-primary"
      >
        Yellow
      </p>
    </label>
  </div>
</DocumentFragment>
`;
